--- a/production/index_sales_network.html
+++ b/production/index_sales_network.html
@@ -52,7 +52,7 @@
 						</div>
 						<ul class="menu__box">
 							<li class="menu__item" data-hover="false">
-								<a href="index.html" class="menu__links menu__links-home">
+								<a href="javascript:void(0)" class="menu__links menu__links-home">
 									<span class="menu__title menu__title-parent">Home</span>
 								</a>
 								<ul class="menu__extra menu__extra-home">
@@ -208,12 +208,12 @@
 								</a>
 							</li>
 							<li class="menu__item">
-								<a href="#gallery" class="menu__links">
-									<span class="menu__title">Gallery</span>
+								<a href="#gallery" class="menu__links menu__links-active">
+									<span class="menu__title">Sales Network</span>
 								</a>
 							</li>
 							<li class="menu__item">
-								<a href="#contacts" class="menu__links menu__links-active">
+								<a href="#contacts" class="menu__links">
 									<span class="menu__title">Contacts</span>
 								</a>
 							</li>
@@ -226,100 +226,163 @@
 
 
 			<!-- BEGIN - MAIN -->
-			<section class="main page page-contact">
+			<section class="main page">
 				<p class="breadcrumb">
 					<a href="#" class="breadcrumb__link">Home</a>
 					<span class="divider">&nbsp;|&nbsp;</span>
-					<span>Contacts</span>
+					<span>Sales Network</span>
 				</p>
 
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
-							<!-- CONTACT FORM -->
+				<!-- BEGIN - SALES NETWORK -->
+				<div class="item item-padding bg-white">
+					<div class="container">
+						<div class="row">
 
-							<div class="row">
-								<!-- Address -->
-								<div class="contact__details col-sm-4">
-								<h3 class="contact__details_heading">Address:</h3>
-									<div class="contact_address">
-										<i class="icons-marker fa fa-home"></i>
-										138 Atlantis Ln Kingsport Illinois 121164
-									</div>
-									<h3 class="contact__details_heading">Phones:</h3>
-									<div class="contact__details_telephone">
-										<i class="icons-marker fa fa-phone"></i>
-										<a class="contact__details-link" href="tel:+80023456789">800-2345-6789</a>
-									</div>
-									<div class="contact__details_fax">
-										<i class="icons-marker fa fa-fax"></i>
-										<a class="contact__details-link" href="tel:+80023456789">800-2345-6789</a>
-									</div>
-									<h3 class="contact__details_heading">E-mail:</h3>
-									<div class="contact__details_emailto">
-										<i class="icons-marker fa fa-envelope"></i>
-										<a class="contact__details-link" href="mailto:mail@demolink.com">mail@demolink.com</a>
-									</div>
-									<div class="contact_vcard">
-										Download information as:
-										<a class="contact__details-link" href="javascript:void(0)">vCard</a>
-									</div>
-								</div>
-
-
-								<!-- Misc -->
-								<div class="col-sm-8">
-									<div class="contact_misc">
-										<h3 class="contact__details_heading">Miscellaneous information:</h3>
-										<p>Email us with any questions or inquiries or use our contact data.</p>
-									</div>
-									<!-- BEGIN - forms -->
-									<form class="contact__form" novalidate="novalidate" id="Form">
-										<div class="hidden contact__form_message" id="send">
-											<span class="s">Thank You! Your message has been sent.</span>
-											<span class="e">Something went wrong, please try again later.</span>
-											<span class="c">Please enter a correct Captcha answer.</span>
-										</div>
-										<fieldset>
-											<div class="row">
-												<div class="control control-group-input col-sm-4">
-													<div class="control">
-														<input type="text" placeholder="Name" name="userName" id="name_0" class="contact__form_text hasTooltip" required="" title="" data-original-title="Name">
-													</div>
-												</div>
-												<div class="control control-group-input col-sm-4">
-													<div class="control">
-														<input type="email" placeholder="Email" name="userEmail" id="email_1" class="contact__form_email hasTooltip" required="" title="" data-original-title="Email">
-													</div>
-												</div>
-												<div class="control control-group-input col-sm-4">
-													<div class="control">
-														<input type="text" placeholder="Phone" name="userPhone" id="phone_2" class="contact__form_text hasTooltip" title="" data-original-title="Phone">
-													</div>
-												</div>
-												<div class="control control-group-input col-sm-12">
-													<div class="control">
-														<textarea name="userMessage" placeholder="Message" id="message_3" class="contact__form_textarea hasTooltip" required="" title="" data-autosize-on="true" style="overflow: hidden; word-wrap: break-word; height: 146px;" data-original-title="Message"></textarea>
-													</div>
-												</div>
-												<!--  BEGIN - Submit Button -->
-												<div class="control control-group-button col-sm-12">
-													<div class="control">
-														<button type="submit" class="btn btn-article contact__form_btn">Send</button>
-														<button type="reset" class="btn btn-article contact__form_btn reset">Clear</button>
-													</div>
-												</div>
-												<!--  END - Submit Button -->
-											</div>
-										</fieldset>
-									</form>
-									<!-- END - forms -->
-								</div>
+							<!-- Text -->
+							<div class="col-xs-12">
+								<h2 class="item__title h1">Frequently asked questions</h2>
+								<p>If you need help, we have a list of frequently asked questions and answers. We strive to give you the best buying experience possible. Click a question below to view the answer.</p>
 							</div>
+							<!-- \Text -->
 						</div>
-						<!-- MISC INFO -->
+
+						<div class="row">
+							<!-- Toggle Tabs -->
+							<div class="col-xs-12">
+								<div class="accordion panel-group collapse in" id="accordion173" role="tablist" aria-multiselectable="true" aria-expanded="true">
+
+									<div class="panel panel-default">
+										<!-- Item title -->
+										<div class="panel-heading" role="tab" id="heading_56">
+											<!-- \Text -->
+											<a class="collapsed" role="button" href="#collapse_173_56" data-toggle="collapse" data-parent="#accordion173" aria-expanded="false" aria-controls="heading_56">
+												<span class="panel-heading_icon"></span>
+												1. How can I change something in my order?</a>
+											</div>
+
+											<div id="collapse_173_56" class="panel-collapse collapse" role="tabpanel" aria-labelledby="#collapse_173_56" aria-expanded="false" style="height: 0px;">
+												<div class="panel-body">
+													<!-- Intro Image -->
+
+													<!-- Introtext -->
+													<p>If you need to change something your order, please contact us immediately. We usually process orders within 2-4 hours, and once we have processed your order, we will be unable to make any changes.</p>
+													<!-- Read More link -->
+
+												</div>
+											</div>
+										</div>
+
+										<div class="panel panel-default">
+											<!-- Item title -->
+											<div class="panel-heading" role="tab" id="heading_55">
+												<a class="collapsed" role="button" href="#collapse_173_55" data-toggle="collapse" data-parent="#accordion173" aria-expanded="false" aria-controls="heading_55">
+													<span class="panel-heading_icon"></span>
+													2. How can I pay for my order?</a>
+												</div>
+
+												<div id="collapse_173_55" class="panel-collapse collapse " role="tabpanel" aria-labelledby="#collapse_173_55" aria-expanded="false">
+													<div class="panel-body">
+														<!-- Intro Image -->
+
+														<!-- Introtext -->
+														<p>We accept Visa, MasterCard, and American Express credit and debit cards for your convenience.</p>
+														<!-- Read More link -->
+
+													</div>
+												</div>
+											</div>
+
+											<div class="panel panel-default">
+												<!-- Item title -->
+												<div class="panel-heading" role="tab" id="heading_54">
+													<a class="collapsed" role="button" href="#collapse_173_54" data-toggle="collapse" data-parent="#accordion173" aria-expanded="false" aria-controls="heading_54">
+														<span class="panel-heading_icon"></span>
+														3. Can I track my order?</a>
+													</div>
+
+													<div id="collapse_173_54" class="panel-collapse collapse " role="tabpanel" aria-labelledby="#collapse_173_54" aria-expanded="false">
+														<div class="panel-body">
+															<!-- Intro Image -->
+
+															<!-- Introtext -->
+															<p>Yes, you can! After placing your order you will receive an order confirmation via email. Each order starts production 24 hours after your order is placed. Within 72 hours of you placing your order, you will receive an expected delivery date. When the order ships, you will receive another email with the tracking number and a link to trace the order online with the carrier.</p>
+															<!-- Read More link -->
+
+														</div>
+													</div>
+												</div>
+
+												<div class="panel panel-default">
+													<!-- Item title -->
+													<div class="panel-heading" role="tab" id="heading_53">
+														<a class="collapsed" role="button" href="#collapse_173_53" data-toggle="collapse" data-parent="#accordion173" aria-expanded="false" aria-controls="heading_53">
+															<span class="panel-heading_icon"></span>
+															4. Can I return an item?</a>
+														</div>
+
+														<div id="collapse_173_53" class="panel-collapse collapse " role="tabpanel" aria-labelledby="#collapse_173_53" aria-expanded="false">
+															<div class="panel-body">
+																<!-- Intro Image -->
+
+																<!-- Introtext -->
+																<p>Please visit our Returns &amp; Exchanges page for more information.</p>
+																<!-- Read More link -->
+
+															</div>
+														</div>
+													</div>
+
+													<div class="panel panel-default">
+														<!-- Item title -->
+														<div class="panel-heading" role="tab" id="heading_52">
+															<a class="collapsed" role="button" href="#collapse_173_52" data-toggle="collapse" data-parent="#accordion173" aria-expanded="false" aria-controls="heading_52">
+																<span class="panel-heading_icon"></span>
+																5. How long will my order take to be delivered?</a>
+															</div>
+
+															<div id="collapse_173_52" class="panel-collapse collapse" role="tabpanel" aria-labelledby="#collapse_173_52" aria-expanded="false" style="height: 0px;">
+																<div class="panel-body">
+																	<!-- Intro Image -->
+
+																	<!-- Introtext -->
+																	<p>Delivery times will depend on your location. Once payment is confirmed your order will be packaged. Delivery can be expected within 10 business days.</p>
+																	<!-- Read More link -->
+
+																</div>
+															</div>
+														</div>
+
+														<div class="panel panel-default">
+															<!-- Item title -->
+															<div class="panel-heading" role="tab" id="heading_51">
+																<a class="collapsed" role="button" href="#collapse_173_51" data-toggle="collapse" data-parent="#accordion173" aria-expanded="false" aria-controls="heading_51">
+																	<span class="panel-heading_icon"></span>
+																	6. Do I need an account and what are the benefits?</a>
+																</div>
+
+																<div id="collapse_173_51" class="panel-collapse collapse " role="tabpanel" aria-labelledby="#collapse_173_51" aria-expanded="false">
+																	<div class="panel-body">
+																		<!-- Intro Image -->
+
+																		<!-- Introtext -->
+																		<p>It's not required to create an account. But, having an account provides easier checkout, the ability to create and send a wishlist, and a customized shopping experience.</p>
+																		<!-- Read More link -->
+
+																	</div>
+																</div>
+															</div>
+
+														</div>
+							</div>
+							<!-- \Toggle Tabs -->
+
+
+
+						</div>
 					</div>
 				</div>
+				<!-- END - SALES NETWORK -->
+
 			</section>
 			<!-- END - MAIN -->
 
@@ -368,5 +431,7 @@
 	<script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWJurDWAjcWCgQ7ntxdQwLxcECKf9fqcE&callback=initMap">
 	</script>
+
+	<script src="http://localhost:35729/livereload.js?snipver=1"></script>
 </body>
 </html>
