--- a/production/index_about.html
+++ b/production/index_about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home</title>
+	<title>Contacts</title>
 	<link media="all" rel="stylesheet" href="build/vendor.css">
 	<link media="all" rel="stylesheet" href="build/app.css">
 </head>
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<div class="wrapper__inner">
 			<header class="header">
-				<div class="header__top">
+				<div class="header__top header__top_contacts">
 					<!-- BEGIN - LOGO -->
 					<div class="logo">
 						<a href="javascript:void(0)">
@@ -52,7 +52,7 @@
 						</div>
 						<ul class="menu__box">
 							<li class="menu__item" data-hover="false">
-								<a href="javascript:void(0)" class="menu__links menu__links-active  menu__links-home">
+								<a href="javascript:void(0)" class="menu__links menu__links-home">
 									<span class="menu__title menu__title-parent">Home</span>
 								</a>
 								<ul class="menu__extra menu__extra-home">
@@ -130,7 +130,7 @@
 								</ul>
 							</li>
 							<li class="menu__item">
-								<a href="#about" class="menu__links">
+								<a href="#about" class="menu__links menu__links-active">
 									<span class="menu__title">About</span>
 								</a>
 							</li>
@@ -213,7 +213,7 @@
 								</a>
 							</li>
 							<li class="menu__item">
-								<a href="contacts.html" class="menu__links">
+								<a href="#contacts" class="menu__links">
 									<span class="menu__title">Contacts</span>
 								</a>
 							</li>
@@ -221,193 +221,146 @@
 					</nav>
 					<!-- END - NAV -->
 				</div>
-
-
-
-				<!-- BEGIN - Slider main container -->
-				<div class="swiper-container swiper__container">
-					<!-- Additional required wrapper -->
-					<div class="swiper-wrapper swiper__wrapper">
-						<!-- Slides -->
-						<div class="swiper__slide swiper-slide" data-slide-bg="build/images/slide-1.jpg" style="background-image: url(build/images/slide-1.jpg); background-size: cover;" data-swiper-slide-index="0">
-							<div class="box">
-								<div class="box__aside">17</div>
-								<h2 class="box__title">years of success</h2>
-								<p class="box__content">Gas &amp; Oil Trading is the largest internationally active crude oil and natural gas producer. We explore and produce oil and gas in Europe, North Africa, South America, Russia, the Caspian Sea region, and the Middle East. We have been active for over 17 years and have a workforce in excess of 2,500 employees from more than 40 nationalities. </p>
-							</div>
-						</div>
-						<div class="swiper__slide swiper-slide" data-slide-bg="build/images/slide-2.jpg" style="background-image: url(build/images/slide-2.jpg); background-size: cover;" data-swiper-slide-index="0">
-							<div class="box" data-caption-animate="fadeIn" data-caption-delay="200">
-								<div class="box__aside">17</div>
-								<h2 class="box__title">years of success</h2>
-								<p class="box__content">Gas &amp; Oil Trading is the largest internationally active crude oil and natural gas producer. We explore and produce oil and gas in Europe, North Africa, South America, Russia, the Caspian Sea region, and the Middle East. We have been active for over 17 years and have a workforce in excess of 2,500 employees from more than 40 nationalities. </p>
-							</div>
-						</div>
-						<div class="swiper__slide swiper-slide" data-slide-bg="build/images/slide-3.jpg" style="background-image: url(build/images/slide-3.jpg); background-size: cover;" data-swiper-slide-index="0">
-							<div class="box" data-caption-animate="fadeIn" data-caption-delay="200">
-								<div class="box__aside">17</div>
-								<h2 class="box__title">years of success</h2>
-								<p class="box__content">Gas &amp; Oil Trading is the largest internationally active crude oil and natural gas producer. We explore and produce oil and gas in Europe, North Africa, South America, Russia, the Caspian Sea region, and the Middle East. We have been active for over 17 years and have a workforce in excess of 2,500 employees from more than 40 nationalities. </p>
-							</div>
-						</div>
-					</div>
-					<!-- If we need pagination -->
-					<div class="swiper-pagination"></div>
-
-					<!-- If we need navigation buttons -->
-					<div class="swiper-button-prev"></div>
-					<div class="swiper-button-next"></div>
-
-					<!-- If we need scrollbar -->
-					<div class="swiper-scrollbar"></div>
-				</div>
-				<!-- END - Slider main container -->
 			</header>
 
 
 
 			<!-- BEGIN - MAIN -->
-			<section class="main">
-				<div class="article">
-					<!-- BEGIN - ARTICLE-TOP -->
-					<div class="preview preview-top01">
-						<div class="container">
-							<div class="row">
-								<div class="col-sm-6">
-									<h3 class="preview__title">Implementation of oil field projects of any complexity</h3>
-									<p class="preview__introtext preview__introtext-top">We provide fuel for transportation, energy for heat and light, lubricants to keep engines moving and petrochemicals to make everyday items.</p>
-								</div>
-								<div class="col-sm-6">
-									<figure class="preview__img preview__img-top">
-										<img src="build/images/article-top01.jpg" alt="">
-									</figure>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="preview-top02">
-						<div class="container">
-							<div class="row">
-								<div class="col-sm-6">
-									<figure class="preview__img preview__img-bottom">
-										<img src="build/images/article-top02.jpg" alt="">
-									</figure>
-								</div>
-								<div class="col-sm-6">
-									<h3 class="preview__title">Our business model</h3>
-									<p class="preview__introtext">We believe that the best way to achieve sustainable success as a group is to act in the long-term interests of our shareholders, our partners and society.</p>
-									<a class="btn btn-info readmore" href="javascript:void(0)"><span>Read more</span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- END - ARTICLE-TOP -->
+			<section class="main page">
+				<p class="breadcrumb">
+					<a href="#" class="breadcrumb__link">Home</a>
+					<span class="divider">&nbsp;|&nbsp;</span>
+					<span>About</span>
+				</p>
 
-
-
-					<!-- BEGIN - ARTICLE-BOTTOM01 -->
-					<div class="article-bottom01">
+				<!-- BEGIN - ABOUT -->
+				<div class="item item-padding bg-white">
+					<div class="container">
 						<div class="row">
-							<article class="col-sm-4 category">
-								<figure class="category__fig">
-									<a class="category__link" href="javascript:void(0)">
-										<img class="category__img" src="build/images/bottom-article03.jpg" alt="">
-									</a>
-								</figure>
-								<h4><a class="category__title" href="javascript:void(0)">People and values</a></h4>
-							</article>
-							<article class="col-sm-4 category">
 
-								<figure class="category__fig">
-									<a class="category__link" href="javascript:void(0)">
-										<img class="category__img" src="build/images/bottom-article02.jpg" alt="">
-									</a>
-								</figure>
-								<h4><a class="category__title" href="javascript:void(0)">Our brands</a></h4>
-							</article>
-							<article class="col-sm-4 category">
-								<figure class="category__fig">
-									<a class="category__link" href="javascript:void(0)">
-										<img class="category__img" src="build/images/bottom-article01.jpg" alt="">
-									</a>
-								</figure>
-								<h4><a class="category__title" href="javascript:void(0)">Group organisation</a></h4>
-							</article>
+							<!-- Text -->
+							<div class="col-sm-6 animated animated-box">
+								<h2 class="item__title h1">About us</h2>
+								<p>Gas & Oil Trading is a leading North American energy producer that is focused on growing its strong portfolio of diverse resource plays producing natural gas, oil and natural gas liquids. By partnering with employees, community organizations and other businesses, we contribute to the strength and sustainability of the communities where we operate.</p>
+								<p>Our management team is comprised of knowledgeable industry professionals. In fact, most of our team members have more than 20 years of experience in the oil and gas industry.</p>
+							</div>
+							<!-- \Text -->
+
+							<!-- Item Image -->
+							<div class="col-sm-6 animated animated-box">
+								<img class="item__img" src="build/images/about/about-img_01.jpg" alt="about">
+							</div>
+							<!-- \Item Image -->
+
 						</div>
 					</div>
-					<!-- END - ARTICLE-BOTTOM01 -->
+				</div>
+				<div class="item item-padding bg-blue">
+					<div class="container">
+						<div class="row">
+
+							<!-- Text -->
+							<div class="col-sm-6 col-sm-push-6 animated animated-box">
+								<h2 class="item__title h1">About us</h2>
+								<p>We will always be on the lookout for the best rocks and we will work to identify a limited number of core growth assets characterized by high returns, scale and running room. Our strategy is centered on diversifying our commodity mix and growing value in top tier assets.</p>
+								<a class="btn btn-info readmore" href="javascript:void(0)"><span>Read more</span></a>
+							</div>
+							<!-- \Text -->
+
+							<!-- Item Image -->
+							<div class="col-sm-6  col-sm-pull-6 animated animated-box">
+								<img class="item__img" src="build/images/about/about-img_02.jpg" alt="about">
+							</div>
+							<!-- \Item Image -->
+
+						</div>
+					</div>
+				</div>
+				<!-- END - ABOUT -->
+
+
+				<!-- BEGIN - ARTICLE-BOTTOM01 -->
+				<div class="article-bottom01">
+					<div class="row">
+						<article class="col-sm-4 category">
+							<figure class="category__fig">
+								<a class="category__link" href="javascript:void(0)">
+									<img class="category__img" src="build/images/about/about_bottom-articles01.jpg" alt="">
+								</a>
+							</figure>
+							<h4><a class="category__title" href="javascript:void(0)">People and values</a></h4>
+						</article>
+						<article class="col-sm-4 category">
+
+							<figure class="category__fig">
+								<a class="category__link" href="javascript:void(0)">
+									<img class="category__img" src="build/images/about/about_bottom-articles02.jpg" alt="">
+								</a>
+							</figure>
+							<h4><a class="category__title" href="javascript:void(0)">Our brands</a></h4>
+						</article>
+						<article class="col-sm-4 category">
+							<figure class="category__fig">
+								<a class="category__link" href="javascript:void(0)">
+									<img class="category__img" src="build/images/about/about_bottom-articles03.jpg" alt="">
+								</a>
+							</figure>
+							<h4><a class="category__title" href="javascript:void(0)">Group organisation</a></h4>
+						</article>
+					</div>
+				</div>
+				<!-- END - ARTICLE-BOTTOM01 -->
+
+
+				<div class="item bg-blue">
+					<div class="container">
+						<div class="row">
+
+							<!-- Text -->
+							<div class="col-xs-12">
+								<h2 class="item__title h1 text-center">The finest quality of oil, gas & commodities</h2>
+							</div>
+							<!-- \Text -->
+
+						</div>
+					</div>
+				</div>
 
 
 
+				<div class="item item-padding bg-gray">
+					<div class="container">
+						<div class="row">
 
-					<!-- BEGIN - ARTICLE-BOTTOM02 -->
-					<div class="article-bottom02">
-						<div class="container">
-							<div class="row">
-								<article class="col-md-6 article-box">
-									<h4 class="article__title">Energy economics</h4>
-									<p class="article__introtext">The Statistical Review provides historic data on world energy markets, while the Energy Outlook makes projections to 2035.</p>
-									<a class="btn btn-article readmore" href="javascript:void(0)"><span>Read more</span></a>
-								</article>
-								<article class="col-md-6 article-box">
-									<h4 class="article__title">Our Technology</h4>
-									<p class="article__introtext">We invest in technologies that we expect will make the most difference to our business and the energy industry.</p>
-									<a class="btn btn-article readmore" href="javascript:void(0)"><span>Read more</span></a>
-								</article>
+							<!-- Text -->
+							<div class="col-xs-12">
+								<h2 class="item__title h1">Testimonials</h2>
 							</div>
 						</div>
+						<div class="row">
+							<div class="col-sm-6">
+								<blockquote>My experience in working with this company was a positive one. Their professionalism was refreshing and I would welcome the opportunity to work with them again. Thank you for very pleasant experience.</blockquote>
+								<span class="item__title--testimonials text-uppercase">Mark Johnson</span>
+							</div>
+							<div class="col-sm-6">
+								<blockquote>I would just like to say thank you for your prompt and effective service, for your friendly and professional support staff! I will recommend your expert company to all my friends. I’m impressed with your service.</blockquote>
+								<span class="item__title--testimonials text-uppercase">John Franklin</span>
+							</div>
+							<!-- \Text -->
+
+						</div>
 					</div>
-					<!-- END - ARTICLE-BOTTOM02 -->
-
-
-
-					<!-- BEGIN - MAP -->
-					<div class="map">
-						<h5 class="map__head">We are located all around the world</h5>
-						<div id="map" class="map__home"></div>
-					</div>
-					<!-- END - MAP -->
 				</div>
+
+
+
+
+
 			</section>
 			<!-- END - MAIN -->
 
 
 
-			<!-- BEGIN - FOOTER -->
-			<footer class="footer">
-				<div class="container">
-					<div class="row">
-						<div class="footer__box col-sm-4">
-							<h3 class="footer__title">Our strategy</h3>
-							<ul>
-								<li class="footer__item"><a href="#">Clear priorities</a></li>
-								<li class="footer__item"><a href="#">Quality portfolio</a></li>
-								<li class="footer__item"><a href="#">Distinctive capabilities</a></li>
-								<li class="footer__item"><a href="#">10-point plan</a></li>
-								<li class="footer__item"><a href="#">Our key performance indicators</a></li>
-							</ul>
-						</div>
-						<div class="footer__box col-sm-3">
-							<h3 class="footer__title">Group organisation</h3>
-							<ul>
-								<li class="footer__item"><a href="#">Business model</a></li>
-								<li class="footer__item"><a href="#">Upstream</a></li>
-								<li class="footer__item"><a href="#">Downstream</a></li>
-							</ul>
-						</div>
-						<div class="footer__box col-sm-5">
-							<h3 class="footer__title">Main office</h3>
-							<ul>
-								<li class="footer__item">28 Jackson Blvd Ste 1020 Chicago IL 60604-2340</li>
-								<li class="footer__item">800-2345-6789</li>
-								<li class="footer__item">7 Days a week from 9:00 am to 7:00 pm</li>
-								<li class="footer__item"><a href="mailto:info@demolink.org">info@demolink.org</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</footer>
-			<!-- END - FOOTER -->
 		</div>
 	</div>
 	<!-- END - WRAPPER -->
@@ -451,5 +404,7 @@
 	<script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWJurDWAjcWCgQ7ntxdQwLxcECKf9fqcE&callback=initMap">
 	</script>
+
+	<script src="http://localhost:35729/livereload.js?snipver=1"></script>
 </body>
 </html>
